fix : change spacing and z-index of containers

--- a/src/app/components/CustomDateRangePicker/DateRangePicker.css
+++ b/src/app/components/CustomDateRangePicker/DateRangePicker.css
@@ -3,10 +3,11 @@
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
   border-radius: 30px;
   background-color: #fff;
-  max-height: 450px;
+  max-height: 400px;
   max-width: 95vw;
   min-width: 300px;
-  width: 95vw;
+  width: 85vw;
+  z-index: 2;
 }
 
 div > .rdrDateDisplayWrapper {
@@ -20,7 +21,11 @@ div > .rdrDateDisplayWrapper {
 
 .rdrMonthPicker > select,
 .rdrYearPicker > select {
-  font-size: 1rem;
+  font-size: 1.25rem;
+}
+
+.rdrMonthAndYearWrapper > button > i {
+  margin: auto;
 }
 
 button.rdrNextPrevButton {
@@ -82,6 +87,11 @@ span.rdrInRange {
 }
 
 @media screen and (min-width: 1000px) {
+  .rdrMonthAndYearWrapper > button {
+    width: 40px;
+    height: 40px;
+  }
+
   .rdrWeekDay,
   .rdrDayNumber,
   .rdrMonthPicker > select,
@@ -97,7 +107,7 @@ span.rdrInRange {
   }
   .rdrDateRangeWrapper,
   .rdrDateRangeWrapper {
-    max-height: 60vh;
+    max-height: 55vh;
     max-width: 60vw;
     min-width: 300px;
     width: 60vw;
